tests/cli/snapshots/cli__cargo_mutants_in_relative_dependency_tree_passes.snap
---
source: tests/cli/main.rs
expression: stdout
---
Found 6 mutants to test
ok       Unmutated baseline
caught   src/lib.rs:6:5: replace double_factorial -> u32 with 0
caught   src/lib.rs:6:5: replace double_factorial -> u32 with 1
caught   src/lib.rs:6:10: replace < with == in double_factorial
caught   src/lib.rs:6:10: replace < with > in double_factorial
caught   src/lib.rs:9:7: replace * with + in double_factorial
caught   src/lib.rs:9:7: replace * with / in double_factorial
6 mutants tested: 6 caught

